--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
